ajax pagination update 24-12-2016

--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -23,6 +23,11 @@ footer {
   bottom: 0;
 
 }
+.loading_ajax_img {
+  position: absolute;
+  vertical-align: top;
+  width: 52px;
+}
 footer a {
   color:#fff;
   font-weight:bold;
