--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1049,10 +1049,10 @@ p.h2 > img {
 }
 .crete_bot_form label {
   width: 100%;
-  margin-bottom:0px;
+  margin-bottom:0;
 }
-.create_bot_form small {
-  color: #aeaeae;
+small {
+  color: #a0a0a0;
   margin-left: 20px;
 }
 .crete_bot_form input[type="file"] {
