--- a/web/lib/css/emoji.css
+++ b/web/lib/css/emoji.css
@@ -135,6 +135,7 @@ img.emoji {
     -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+    margin-left:-200px;
 }
 
 .emoji-items-wrap1 {
