--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -2111,6 +2111,7 @@ body .emoji-picker-container.text-area .emoji-wysiwyg-editor {
 
 .price.panel-green>.panel-body .lead{
   text-shadow: 0px 3px 0px rgba(50,50,50, .3);
+  margin-bottom:0;
 }
 
 .price.panel-green .list-group-item {
@@ -2168,12 +2169,12 @@ body .emoji-picker-container.text-area .emoji-wysiwyg-editor {
 
 .price.panel-red>.panel-body .lead{
   text-shadow: 0px 3px 0px rgba(50,50,50, .3);
+  margin-bottom:0;
 }
 
 .price.panel-red .list-group-item {
   color: #333;
   background-color: rgba(50,50,50, .01);
-  font-weight:600;
   text-shadow: 0px 1px 0px rgba(250,250,250, .75);
 }
 
@@ -2197,12 +2198,12 @@ body .emoji-picker-container.text-area .emoji-wysiwyg-editor {
 
 .price.panel-grey>.panel-body .lead{
   text-shadow: 0px 3px 0px rgba(50,50,50, .3);
+  margin-bottom:0;
 }
 
 .price.panel-grey .list-group-item {
   color: #333;
   background-color: rgba(50,50,50, .01);
-  font-weight:600;
   text-shadow: 0px 1px 0px rgba(250,250,250, .75);
 }
 
