--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-@import url("http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,300,700italic,700,500&subset=latin,latin-ext");
+@import url("https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,300,700italic,700,500&subset=latin,latin-ext");
 /* CSS Document */
 html {
   height: 100%;
@@ -594,7 +594,7 @@ div.buying_table {
   border: 1px solid #2e6da4;
   min-width: 14px;
   padding: 0 7px;
-  margin: 0 5px 0 0;
+  margin: 0 5px 0 5px;
   border-radius: 4px;
   color:#fff;
   font-size: 14px;
