--- a/web/css/style.css
+++ b/web/css/style.css
@@ -158,7 +158,7 @@
 .login_register .content {
   background-color: #ececec;
   border-radius: 8px;
-  
+
 }
 .register {
   background-color: #fff;
@@ -457,17 +457,17 @@ h1.logo {
     margin-top:0;
   }
 }
-	
+
 	@media (max-width:480px){
 .content h3 {
   font-size: 22px;
-}	
+}
 .login_register .sigup.content .register, .login .register {
   background-size: 25px auto;
 }
 .login_register h2 {
   font-size: 25px;
-}
+}z
 	}
 
 .modal-content img {
