--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -646,8 +646,8 @@ div.buying_table {
 .paginacio .botonou .btn {
     font-size: 14px;
     line-height: 24px;
-    padding-left:10px;
-    padding-right:10px;
+    padding-left:20px;
+    padding-right:20px;
     margin: 0 5px 0 0;
     float:left;
 }
@@ -2126,6 +2126,9 @@ body .emoji-picker-container.text-area .emoji-wysiwyg-editor {
     float: left;
     width: 120px;
     margin-right: 5px;
+    border: 1px solid #DEE1E6;
+    border-radius:5px;
+    padding:4px 10px;
 }
 .telebuttons {
     background:#DEE1E6;
